--- a/src/main/resources/locales/en/plugins.json
+++ b/src/main/resources/locales/en/plugins.json
@@ -4,23 +4,41 @@
     "form": {
       "header": "LDAP Configuration",
       "profile": "Profile",
+      "profileHelp": "Predifined profiles for different LDAP-Servers.",
       "attributeNameId": "ID Attribute Name",
+      "attributeNameIdHelp": "LDAP attribute name holding the username (e.g. uid).",
       "attributeNameFullname": "Fullname Attribute Name",
+      "attributeNameFullnameHelp": "LDAP attribute name for the users displayname (e.g. cn).",
       "attributeNameMail": "Mail Attribute Name",
+      "attributeNameMailHelp": "LDAP attribute name for the users e-mail address (e.g. mail).",
       "attributeNameGroup": "Group Attribute Name",
+      "attributeNameGroupHelp": "The name of the ldap attribute which contains the group names of the user.",
       "baseDn": "Base DN",
+      "baseDnHelp": "The basedn for example: dc=example,dc=com",
       "connectionDn": "Connection DN",
+      "connectionDnHelp": "The complete dn of the proxy user. Note: This user needs read an search privileges for the id, mail and fullname attributes.",
       "connectionPassword": "Connection Password",
+      "connectionPasswordHelp": "The password for proxy user.",
       "hostUrl": "Host URL",
+      "hostUrlHelp": "The url for the ldap server. For example: ldap://localhost:389/",
       "searchFilter": "Search Filter",
+      "searchFilterHelp": "The search filter to find the users. Note: {0} will be replaced by the username.",
       "searchFilterGroup": "Group Search Filter",
+      "searchFilterGroupHelp": "The search filter to find groups of the user. Note: {0} will be replaced by the dn of the user. {1} will be replaced by the username. {2} will be replaced by the email address of the user.",
       "searchScope": "Search Scope",
+      "searchScopeHelp": "The scope for the user search.",
       "unitPeople": "People Unit",
+      "unitPeopleHelp": "The relative location of the users. For example: ou=People",
       "unitGroup": "Groups Unit",
+      "unitGroupHelp": "The relative location of the groups. For example: ou=Groups",
       "referralStrategy": "Referral Strategy",
+      "referralStrategyHelp": "Strategy to handle ldap referrals. IGNORE: will ignore all referrals. FOLLOW: automatically follow any referrals. THROW: throw a ReferralException for each referral.",
       "enableNestedADGroups": "Enable nested ad groups",
+      "enableNestedADGroupsHelp": "Enable search for nested ActiveDirectory groups. Note: Nested ad groups work only for ActiveDirectory.",
       "enableStartTls": "Use StartTLS",
+      "enableStartTlsHelp": "Use StartTLS extension to encrypt the connection to the directory server.",
       "enabled": "Enabled",
+      "enabledHelp": "Enables or disables the ldap authentication.",
       "options": {
         "profile": {
           "Custom": "Custom",
