Add test connection dialog

--- a/src/main/resources/locales/en/plugins.json
+++ b/src/main/resources/locales/en/plugins.json
@@ -59,7 +59,15 @@
           "IGNORE": "IGNORE",
           "THROW": "THROW"
         }
-      }
+      },
+      "testButton": "Test connection"
+    },
+    "testForm": {
+      "title": "LDAP Connection Test",
+      "username": "Username",
+      "password": "Password",
+      "submit": "Test",
+      "abort": "Cancel"
     }
   }
 }
