Take german texts from 1.x

--- a/src/main/resources/locales/de/plugins.json
+++ b/src/main/resources/locales/de/plugins.json
@@ -4,41 +4,41 @@
     "form": {
       "header": "LDAP Konfiguration",
       "profile": "Profil",
-      "profileHelp": "Vorbereitete Profile für verschiedene LDAP-Server.",
-      "attributeNameId": "Attribut-Name der ID",
-      "attributeNameIdHelp": "LDAP Attribut-Name für den Benutzernamen (z. B. uid).",
-      "attributeNameFullname": "Attribut-Name des Klarnamens",
-      "attributeNameFullnameHelp": "LDAP Attribut-Name für den Klarnamen des Benutzers (z. B. cn).",
-      "attributeNameMail": "Attribut-Name der Mail-Adresse",
-      "attributeNameMailHelp": "LDAP Attribut-Name für die E-Mail-Addresse des Benutzers (z. B. mail).",
-      "attributeNameGroup": "Attribut-Name der Gruppen",
-      "attributeNameGroupHelp": "Der Name des LDAP Attributs, welches die Namen der Gruppen für den Benutzer beinhaltet.",
-      "baseDn": "Basis DN",
-      "baseDnHelp": "Die basedn, z. B.: dc=example,dc=com",
+      "profileHelp": "Vordefinierte LDAP-Profile",
+      "attributeNameId": "Attributname: ID",
+      "attributeNameIdHelp": "LDAP Attributname der eindeutigen ID der Accounts (z. B. uid)",
+      "attributeNameFullname": "Atributname: Vollständiger Name",
+      "attributeNameFullnameHelp": "LDAP Attributname des vollständigen Accountnamens (z. B. cn)",
+      "attributeNameMail": "Attributname: eMail-Adresse",
+      "attributeNameMailHelp": "LDAP Attributname der Account-eMail-Adresse (z. B. mail)",
+      "attributeNameGroup": "Attributname: Gruppen",
+      "attributeNameGroupHelp": "Name des LDAP Grupen-Attributes (z.B. group)",
+      "baseDn": "Base DN",
+      "baseDnHelp": "Base DN zum Beispiel: dc=example,dc=com",
       "connectionDn": "Verbindungs DN",
-      "connectionDnHelp": "Die komplette dn des Proxy-Users. Hinweis: Dieser User benötigt Lese- und Suchberechtigung für die ID-, E-Mail- und Klarnamenattribute.",
+      "connectionDnHelp": "Vollständige DN des Proxy-Account. Achtung: Dieser Account benötigt Lese- und Suchberechtigung für die id, mail und fullname Attribute",
       "connectionPassword": "Verbindungspasswort",
-      "connectionPasswordHelp": "Das Passwort des Proxy-Users.",
-      "hostUrl": "Host URL",
-      "hostUrlHelp": "Die URL des LDAP Servers. Zum Beispiel: ldap://localhost:389/",
+      "connectionPasswordHelp": "Das Passwort des Proxy-Account.",
+      "hostUrl": "Server URL",
+      "hostUrlHelp": "URL zum LDAP-Server (z. B. ldap://localhost:389/)",
       "searchFilter": "Suchfilter",
-      "searchFilterHelp": "Der Suchfilter, um Benutzer zu finden. Hinweis: {0} wird durch den Benutzernamen ersetzt.",
-      "searchFilterGroup": "Gruppen-Suchfilter",
-      "searchFilterGroupHelp": "Der Suchfilter, um die Gruppen eines Benutzers zu finden. Hinweis: {0} wird durch die dn of des Benutzers ersetzt, {1} wird durch den Benutzernamen ersetzt und {2} wird durch die E-Mail-Adresse des Benutzers ersetzt.",
-      "searchScope": "Suchbereich",
-      "searchScopeHelp": "Der Bereich für die Benutzersuche.",
-      "unitPeople": "Benutzer Bereich",
-      "unitPeopleHelp": "Der relative Bereich für Benutzer, z. B.: ou=People",
-      "unitGroup": "Gruppen Bereich",
-      "unitGroupHelp": "Der relative Bereich für Gruppen, z. B.: ou=Groups",
-      "referralStrategy": "Verweisstrategie",
-      "referralStrategyHelp": "Strategie zur Behandlung von LDAP-Verweisen. IGNORIEREN: Alle Verweise werden ignoriert. FOLGEN: Verweisen wird automatisch gefolgt. ESKALIEREN: Bei Verweisen wird eine ReferralException geworfen.",
-      "enableNestedADGroups": "Verschachtelte AD-Gruppen aktivieren",
-      "enableNestedADGroupsHelp": "Aktiviert die Suche nach verschachtelten ActiveDirectory-Gruppen. Hinweis: Verschachtelte AD-Gruppen funktionieren nur in ActiveDirectory.",
-      "enableStartTls": "Nutze StartTLS",
-      "enableStartTlsHelp": "Nutzt die Erweiterung für StartTLS zur Verschlüsselung der Verbindung zum LDAP Server.",
+      "searchFilterHelp": "Personensuchfilter. Achtung:: {0} wird durch den Nutzernamen ersetzt",
+      "searchFilterGroup": "Gruppensuchfilter",
+      "searchFilterGroupHelp": "Gruppensuchfilter. Achtung: {0} wird durch die DN des Benutzers erssetzt; {1} wird durch den Nutzernamen ersetzt; {2} wird durch die E-Mail des Benutzers ersetzt",
+      "searchScope": "Suchtiefe (scope)",
+      "searchScopeHelp": "Suchtiefe (scope) für die Personensuche",
+      "unitPeople": "Personen (ou)",
+      "unitPeopleHelp": "Relativer Personen-Pfad (z. B. ou=People)",
+      "unitGroup": "Gruppen (ou)",
+      "unitGroupHelp": "Relativer Gruppen-Pfad (z. B. ou=Groups)",
+      "referralStrategy": "Referenz Strategie",
+      "referralStrategyHelp": "Strategie wie LDAP-Referenzen behandelt werden. IGNORIEREN: Alle Referenzen werden ignoriert. FOLGEN: Alle Referenzen werden verfolgt. ESKALIEREN: Bei Referenzen wird eine ReferralException geworfen.",
+      "enableNestedADGroups": "Aktiviere verschachtelte AD Gruppen",
+      "enableNestedADGroupsHelp": "Aktiviert / Deaktiviert verschachtelte ActiveDirectory Gruppen. Achtung: Verschachtelte Gruppen funktionieren nur mit einem ActiveDirectory Server.",
+      "enableStartTls": "Verwende StartTLS",
+      "enableStartTlsHelp": "Verwende StartTLS Erweiterung um eine verschlüsselte Verbindung zum DirecotryServer aufzubauen.",
       "enabled": "Aktiviert",
-      "enabledHelp": "Aktiviert bzw. deaktiviert die Nutzung des LDAP Verzeichnisses.",
+      "enabledHelp": "Aktiviert / Deaktiviert die LDAP Authentifizierung",
       "options": {
         "profile": {
           "Custom": "Benutzerdefiniert",
@@ -76,7 +76,7 @@
         "userValid": "Gefundener Benutzer ist gültig",
         "userDetails": "Benutzer",
         "userDetailsName": "Name",
-        "userDetailsDisplayName": "Klarname",
+        "userDetailsDisplayName": "Vollständiger Name",
         "userDetailsMail": "E-Mail",
         "groups": "Gruppen",
         "exception": "Fehler"
