Implement permission concept

--- a/src/main/resources/locales/de/plugins.json
+++ b/src/main/resources/locales/de/plugins.json
@@ -82,5 +82,15 @@
         "exception": "Fehler"
       }
     }
+  },
+  "permissions": {
+    "configuration": {
+      "read,write": {
+        "svn": {
+          "displayName": "LDAP Konfiguration ändern",
+          "description": "Darf die LDAP Konfiguration verändern"
+        }
+      }
+    }
   }
 }
