--- a/src/main/resources/locales/en/plugins.json
+++ b/src/main/resources/locales/en/plugins.json
@@ -82,5 +82,15 @@
         "exception": "Exception"
       }
     }
+  },
+  "permissions": {
+    "configuration": {
+      "read,write": {
+        "svn": {
+          "displayName": "Modify LDAP configuration",
+          "description": "May modify the LDAP configuration"
+        }
+      }
+    }
   }
 }
