handle configuration exceptions

--- a/src/main/resources/locales/de/plugins.json
+++ b/src/main/resources/locales/de/plugins.json
@@ -70,6 +70,7 @@
       "abort": "Abbruch",
       "result": {
         "header": "Testergebnis",
+        "configured": "Konfiguration",
         "connected": "Verbindung",
         "userFound": "Benutzersuche",
         "userAuthenticated": "Benutzerauthentifizierung",
