use same, nicer abort translation as in scm-manager core

--- a/src/main/resources/locales/de/plugins.json
+++ b/src/main/resources/locales/de/plugins.json
@@ -67,7 +67,7 @@
       "username": "Benutzername",
       "password": "Passwort",
       "submit": "Testen",
-      "abort": "Abbruch",
+      "abort": "Abbrechen",
       "result": {
         "header": "Testergebnis",
         "configured": "Konfiguration",
