fix review findings

--- a/src/main/resources/locales/de/plugins.json
+++ b/src/main/resources/locales/de/plugins.json
@@ -79,6 +79,7 @@
         "userDetailsName": "Name",
         "userDetailsDisplayName": "Vollständiger Name",
         "userDetailsMail": "E-Mail",
+        "missingValidMail": "<keine gültige E-Mail vorhanden>",
         "groups": "Gruppen",
         "exception": "Fehler"
       }
