--- a/src/main/resources/locales/en/plugins.json
+++ b/src/main/resources/locales/en/plugins.json
@@ -79,6 +79,7 @@
         "userDetailsName": "Name",
         "userDetailsDisplayName": "Display Name",
         "userDetailsMail": "Mail",
+        "missingValidMail": "<missing valid mail>",
         "groups": "Groups",
         "exception": "Exception"
       }
