added settings to config

--- a/src/main/resources/locales/de/plugins.json
+++ b/src/main/resources/locales/de/plugins.json
@@ -25,6 +25,10 @@
       "searchFilterHelp": "Personensuchfilter. Achtung:: {0} wird durch den Nutzernamen ersetzt",
       "searchFilterGroup": "Gruppensuchfilter",
       "searchFilterGroupHelp": "Gruppensuchfilter. Achtung: {0} wird durch die DN des Benutzers erssetzt; {1} wird durch den Nutzernamen ersetzt; {2} wird durch die E-Mail des Benutzers ersetzt",
+      "searchFilterNestedGroup": "Klassenanteil für verschachtelte Gruppenfilter",
+      "searchFilterNestedGroupHelp": "Gruppensuchfilter für verschachtelte Gruppen, der Klassenanteil. Achtung: {0} wird durch die DN des Benutzers erssetzt; {1} wird durch den Nutzernamen ersetzt; {2} wird durch die E-Mail des Benutzers ersetzt",
+      "searchFilterNestedMember": "Mitgliederanteil verschachtelte Gruppenfilter",
+      "searchFilterNestedMemberHelp": "Gruppensuchfilter für verschachtelte gruppen, der Mitgliederanteil. Achtung: {0} wird durch die DN des Benutzers erssetzt; {1} wird durch den Nutzernamen ersetzt; {2} wird durch die E-Mail des Benutzers ersetzt",
       "searchScope": "Suchtiefe (scope)",
       "searchScopeHelp": "Suchtiefe (scope) für die Personensuche",
       "unitPeople": "Personen (ou)",
@@ -35,6 +39,8 @@
       "referralStrategyHelp": "Strategie wie LDAP-Referenzen behandelt werden. IGNORIEREN: Alle Referenzen werden ignoriert. FOLGEN: Alle Referenzen werden verfolgt. ESKALIEREN: Bei Referenzen wird eine ReferralException geworfen.",
       "enableNestedADGroups": "Aktiviere verschachtelte AD Gruppen",
       "enableNestedADGroupsHelp": "Aktiviert / Deaktiviert verschachtelte ActiveDirectory Gruppen. Achtung: Verschachtelte Gruppen funktionieren nur mit einem ActiveDirectory Server.",
+      "enableNestedGroups": "Aktiviere verschachtelte Gruppen",
+      "enableNestedGroupsHelp": "Aktiviert / Deaktiviert verschachtelte Gruppen. Funktioniert mit allen Servern bis zu einer Tiefe von 20.",
       "enableStartTls": "Verwende StartTLS",
       "enableStartTlsHelp": "Verwende StartTLS Erweiterung um eine verschlüsselte Verbindung zum DirecotryServer aufzubauen.",
       "enabled": "Aktiviert",
