--- a/src/main/resources/locales/de/plugins.json
+++ b/src/main/resources/locales/de/plugins.json
@@ -24,11 +24,9 @@
       "searchFilter": "Suchfilter",
       "searchFilterHelp": "Personensuchfilter. Achtung:: {0} wird durch den Nutzernamen ersetzt",
       "searchFilterGroup": "Gruppensuchfilter",
-      "searchFilterGroupHelp": "Gruppensuchfilter. Achtung: {0} wird durch die DN des Benutzers erssetzt; {1} wird durch den Nutzernamen ersetzt; {2} wird durch die E-Mail des Benutzers ersetzt",
-      "searchFilterNestedGroup": "Klassenanteil für verschachtelte Gruppenfilter",
-      "searchFilterNestedGroupHelp": "Gruppensuchfilter für verschachtelte Gruppen, der Klassenanteil. Achtung: {0} wird durch die DN des Benutzers erssetzt; {1} wird durch den Nutzernamen ersetzt; {2} wird durch die E-Mail des Benutzers ersetzt",
-      "searchFilterNestedMember": "Mitgliederanteil verschachtelte Gruppenfilter",
-      "searchFilterNestedMemberHelp": "Gruppensuchfilter für verschachtelte gruppen, der Mitgliederanteil. Achtung: {0} wird durch die DN des Benutzers erssetzt; {1} wird durch den Nutzernamen ersetzt; {2} wird durch die E-Mail des Benutzers ersetzt",
+      "searchFilterGroupHelp": "Gruppensuchfilter. Achtung: {0} wird durch die DN des Benutzers ersetzt; {1} wird durch den Nutzernamen ersetzt; {2} wird durch die E-Mail des Benutzers ersetzt",
+      "searchFilterNestedGroup": "Gruppenfilter für verschachtelte Gruppen",
+      "searchFilterNestedGroupHelp": "Gruppensuchfilter für verschachtelte Gruppen. Achtung: {0} wird durch die DN der Untergruppe ersetzt",
       "searchScope": "Suchtiefe (scope)",
       "searchScopeHelp": "Suchtiefe (scope) für die Personensuche",
       "unitPeople": "Personen (ou)",
@@ -40,7 +38,7 @@
       "enableNestedADGroups": "Aktiviere verschachtelte AD Gruppen",
       "enableNestedADGroupsHelp": "Aktiviert / Deaktiviert verschachtelte ActiveDirectory Gruppen. Achtung: Verschachtelte Gruppen funktionieren nur mit einem ActiveDirectory Server.",
       "enableNestedGroups": "Aktiviere verschachtelte Gruppen",
-      "enableNestedGroupsHelp": "Aktiviert / Deaktiviert verschachtelte Gruppen. Funktioniert mit allen Servern bis zu einer Tiefe von 20.",
+      "enableNestedGroupsHelp": "Aktiviert / Deaktiviert verschachtelte Gruppen. Dies führt zu erhöhter Anzahl an LDAP Anfragen pro Nutzer.",
       "enableStartTls": "Verwende StartTLS",
       "enableStartTlsHelp": "Verwende StartTLS Erweiterung um eine verschlüsselte Verbindung zum DirecotryServer aufzubauen.",
       "enabled": "Aktiviert",
