--- a/src/main/resources/locales/en/plugins.json
+++ b/src/main/resources/locales/en/plugins.json
@@ -25,10 +25,8 @@
       "searchFilterHelp": "The search filter to find the users. Note: {0} will be replaced by the username.",
       "searchFilterGroup": "Group Search Filter",
       "searchFilterGroupHelp": "The search filter to find groups of the user. Note: {0} will be replaced by the dn of the user. {1} will be replaced by the username. {2} will be replaced by the email address of the user.",
-      "searchFilterNestedGroup": "Class part for nested group filter",
-      "searchFilterNestedGroupHelp": "The search filter to find groups of the user  for nested Groups, the group class part. Note: {0} will be replaced by the dn of the user. {1} will be replaced by the username. {2} will be replaced by the email address of the user.",
-      "searchFilterNestedMember": "Member part for nested group filter",
-      "searchFilterNestedMemberHelp": "The search filter to find groups of the user for nested Groups, the member part. Note: {0} will be replaced by the dn of the user. {1} will be replaced by the username. {2} will be replaced by the email address of the user.",
+      "searchFilterNestedGroup": "nested group filter",
+      "searchFilterNestedGroupHelp": "The search filter to find nested groups of groups. Note: {0} will be replaced by the dn of the subgroup.",
       "searchScope": "Search Scope",
       "searchScopeHelp": "The scope for the user search.",
       "unitPeople": "People Unit",
@@ -40,7 +38,7 @@
       "enableNestedADGroups": "Enable nested ad groups",
       "enableNestedADGroupsHelp": "Enable search for nested ActiveDirectory groups. Note: Nested ad groups work only for ActiveDirectory.",
       "enableNestedGroups": "Enable nested groups",
-      "enableNestedGroupsHelp": "Enable search for nested groups. Works for all server up to a nesting of 20.",
+      "enableNestedGroupsHelp": "Enable search for nested groups. This will result in an increase of ldap searches per user.",
       "enableStartTls": "Use StartTLS",
       "enableStartTlsHelp": "Use StartTLS extension to encrypt the connection to the directory server.",
       "enabled": "Enabled",
