--- a/src/main/resources/locales/en/plugins.json
+++ b/src/main/resources/locales/en/plugins.json
@@ -26,7 +26,7 @@
       "searchFilterGroup": "Group Search Filter",
       "searchFilterGroupHelp": "The search filter to find groups of the user. Note: {0} will be replaced by the dn of the user. {1} will be replaced by the username. {2} will be replaced by the email address of the user.",
       "searchFilterNestedGroup": "nested group filter",
-      "searchFilterNestedGroupHelp": "The search filter to find nested groups of groups. Note: {0} will be replaced by the dn of the subgroup.",
+      "searchFilterNestedGroupHelp": "The search filter to find nested groups of groups. Note: {0} will be replaced by the dn of the subgroup. {1} will be replaced by the group name (cn).",
       "searchScope": "Search Scope",
       "searchScopeHelp": "The scope for the user search.",
       "unitPeople": "People Unit",
