Adding nested group support for non-AD servers (#13)
By enabling the nested group feature in the settings, the plugin searches for group memberships of groups as well and includes them in the list of groups for a user.

Co-authored-by: Ira Fesefeldt <fesefeldt@cs.rwth-aachen.de>

--- a/src/main/resources/locales/de/plugins.json
+++ b/src/main/resources/locales/de/plugins.json
@@ -24,7 +24,9 @@
       "searchFilter": "Suchfilter",
       "searchFilterHelp": "Personensuchfilter. Achtung:: {0} wird durch den Nutzernamen ersetzt",
       "searchFilterGroup": "Gruppensuchfilter",
-      "searchFilterGroupHelp": "Gruppensuchfilter. Achtung: {0} wird durch die DN des Benutzers erssetzt; {1} wird durch den Nutzernamen ersetzt; {2} wird durch die E-Mail des Benutzers ersetzt",
+      "searchFilterGroupHelp": "Gruppensuchfilter. Achtung: {0} wird durch die DN des Benutzers ersetzt; {1} wird durch den Nutzernamen ersetzt; {2} wird durch die E-Mail des Benutzers ersetzt",
+      "searchFilterNestedGroup": "Gruppenfilter für verschachtelte Gruppen",
+      "searchFilterNestedGroupHelp": "Gruppensuchfilter für verschachtelte Gruppen. Achtung: {0} wird durch die DN der Untergruppe ersetzt; {1} wird durch den Gruppennamen (CN) ersetzt",
       "searchScope": "Suchtiefe (scope)",
       "searchScopeHelp": "Suchtiefe (scope) für die Personensuche",
       "unitPeople": "Personen (ou)",
@@ -35,6 +37,8 @@
       "referralStrategyHelp": "Strategie wie LDAP-Referenzen behandelt werden. IGNORIEREN: Alle Referenzen werden ignoriert. FOLGEN: Alle Referenzen werden verfolgt. ESKALIEREN: Bei Referenzen wird eine ReferralException geworfen.",
       "enableNestedADGroups": "Aktiviere verschachtelte AD Gruppen",
       "enableNestedADGroupsHelp": "Aktiviert / Deaktiviert verschachtelte ActiveDirectory Gruppen. Achtung: Verschachtelte Gruppen funktionieren nur mit einem ActiveDirectory Server.",
+      "enableNestedGroups": "Aktiviere verschachtelte Gruppen",
+      "enableNestedGroupsHelp": "Aktiviert / Deaktiviert verschachtelte Gruppen. Dies führt zu erhöhter Anzahl an LDAP Anfragen pro Nutzer.",
       "enableStartTls": "Verwende StartTLS",
       "enableStartTlsHelp": "Verwende StartTLS Erweiterung um eine verschlüsselte Verbindung zum DirecotryServer aufzubauen.",
       "enabled": "Aktiviert",
