--- a/src/main/resources/locales/en/plugins.json
+++ b/src/main/resources/locales/en/plugins.json
@@ -25,6 +25,8 @@
       "searchFilterHelp": "The search filter to find the users. Note: {0} will be replaced by the username.",
       "searchFilterGroup": "Group Search Filter",
       "searchFilterGroupHelp": "The search filter to find groups of the user. Note: {0} will be replaced by the dn of the user. {1} will be replaced by the username. {2} will be replaced by the email address of the user.",
+      "searchFilterNestedGroup": "Nested Group Filter",
+      "searchFilterNestedGroupHelp": "The search filter to find nested groups of groups. Note: {0} will be replaced by the dn of the subgroup. {1} will be replaced by the group name (cn).",
       "searchScope": "Search Scope",
       "searchScopeHelp": "The scope for the user search.",
       "unitPeople": "People Unit",
@@ -35,6 +37,8 @@
       "referralStrategyHelp": "Strategy to handle ldap referrals. IGNORE: will ignore all referrals. FOLLOW: automatically follow any referrals. THROW: throw a ReferralException for each referral.",
       "enableNestedADGroups": "Enable nested ad groups",
       "enableNestedADGroupsHelp": "Enable search for nested ActiveDirectory groups. Note: Nested ad groups work only for ActiveDirectory.",
+      "enableNestedGroups": "Enable nested groups",
+      "enableNestedGroupsHelp": "Enable search for nested groups. This will result in an increase of ldap searches per user.",
       "enableStartTls": "Use StartTLS",
       "enableStartTlsHelp": "Use StartTLS extension to encrypt the connection to the directory server.",
       "enabled": "Enabled",
