Add option to replace illegal chars in group names

--- a/src/main/resources/locales/de/plugins.json
+++ b/src/main/resources/locales/de/plugins.json
@@ -41,6 +41,8 @@
       "enableNestedGroupsHelp": "Aktiviert / Deaktiviert verschachtelte Gruppen. Dies führt zu erhöhter Anzahl an LDAP Anfragen pro Nutzer.",
       "enableStartTls": "Verwende StartTLS",
       "enableStartTlsHelp": "Verwende StartTLS Erweiterung um eine verschlüsselte Verbindung zum DirecotryServer aufzubauen.",
+      "removeInvalidCharacters": "Ungültige Zeichen im Gruppennamen ersetzen",
+      "removeInvalidCharactersHelp": "Ungültige Zeichen im Gruppennamen wie '/', '&', '?' oder Leerzeichen werden mit einem Unterstrich ('_') ersetzt.",
       "enabled": "Aktiviert",
       "enabledHelp": "Aktiviert / Deaktiviert die LDAP Authentifizierung",
       "options": {
