Move test environment doc back to README.md

--- a/src/main/resources/locales/en/plugins.json
+++ b/src/main/resources/locales/en/plugins.json
@@ -64,7 +64,7 @@
           "THROW": "THROW"
         }
       },
-      "testButton": "Test connection"
+      "testButton": "Test Connection"
     },
     "testForm": {
       "title": "LDAP Connection Test",
