Add 'exclude groups located outside group unit' (#33)
Make resolving of groups more configurable by adding an option to exclude groups which are located outside of the configured group unit. By default the ldap plugin will return all groups which are found in the group attribute of the user (e.g.: memberOf attribute), this includes groups which are outside of the groups unit (e.g.: ou=Groups). The new option will ensure that only groups are returned which are located under the group unit.

We've decided to create an option for the behaviour to not break existing installations. The option is only available if the custom profile is selected.

Fixes #22 and #14

--- a/src/main/resources/locales/de/plugins.json
+++ b/src/main/resources/locales/de/plugins.json
@@ -43,6 +43,8 @@
       "enableStartTlsHelp": "Verwende StartTLS Erweiterung um eine verschlüsselte Verbindung zum DirecotryServer aufzubauen.",
       "removeInvalidCharacters": "Ungültige Zeichen im Gruppennamen ersetzen",
       "removeInvalidCharactersHelp": "Ungültige Zeichen im Gruppennamen wie '/', '&', '?' oder Leerzeichen werden mit einem Unterstrich ('_') ersetzt.",
+      "excludeGroupsOutsideUnit": "Verwende nur Gruppen aus dem Gruppen-Pfad",
+      "excludeGroupsOutsideUnitHelp": "Entfernt alle Gruppen aus dem Ergebnis, die nicht aus dem Gruppen-Pfad kommen, auch wenn das Gruppen Attribut Gruppen aus anderen Pfaden zurückliefert.",
       "enabled": "Aktiviert",
       "enabledHelp": "Aktiviert / Deaktiviert die LDAP Authentifizierung",
       "options": {
